DuPont DevSB/src/objects/ccrz__E_ProductSpecIndex__c.object
<CustomObject>
    <fields>
        <fullName>ccrz__ProductSpecIndexId__c</fullName>
        <externalId>true</externalId>
        <label>ProductSpecIndexId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Product Spec Indicies</relationshipLabel>
        <relationshipName>Product_Spec_Indicies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__SpecValue__c</fullName>
        <label>SpecValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Spec__c</fullName>
        <label>Spec</label>
        <referenceTo>ccrz__E_Spec__c</referenceTo>
        <relationshipLabel>Product Spec Indicies</relationshipLabel>
        <relationshipName>Product_Spec_Indicies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Product Spec Index</label>
    <nameField>
        <label>Product Spec Index</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Product Spec Indicies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>